--- a/css/layout.css
+++ b/css/layout.css
@@ -186,46 +186,46 @@ ul#nav li.current a { color: #F06000; }
 /* c. About Section
 /* ------------------------------------------------------------------ */
 
-#about {
+#aboutBrief {
    background: #2B2B2B;
    padding-top: 96px;
    padding-bottom: 66px;
    overflow: hidden;
 }
 
-#about a, #about a:visited  { color: #fff; }
-#about a:hover, #about a:focus { color: #11ABB0; }
+#aboutBrief a, #aboutBrief a:visited  { color: #fff; }
+#aboutBrief a:hover, #aboutBrief a:focus { color: #11ABB0; }
 
-#about h2 {
+#aboutBrief h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
    color: #fff;
    margin-bottom: 12px;
 }
-#about p {
+#aboutBrief p {
    line-height: 30px;
    color: #7A7A7A;
 }
-#about .profile-pic {
+#aboutBrief .profile-pic {
    position: relative;
    width: 120px;
    height: 120px;
    border-radius: 100%;
 }
-#about .contact-details { width: 41.66667%; }
-#about .download {
+#aboutBrief .contact-details { width: 41.66667%; }
+#aboutBrief .download {
    width: 58.33333%;
    padding-top: 6px;
 }
-#about .main-col { padding-right: 5%; }
-#about .download .button {
+#aboutBrief .main-col { padding-right: 5%; }
+#aboutBrief .download .button {
    margin-top: 6px;
    background: #444;
 }
-#about .download .button:hover {
+#aboutBrief .download .button:hover {
    background: #fff;
    color: #2B2B2B;
 }
-#about .download .button i {
+#aboutBrief .download .button i {
    margin-right: 15px;
    font-size: 20px;
 }
