--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -49,13 +49,13 @@
 
    /* About Section
    ------------------------------------------------------------------- */
-   #about .profile-pic {
+   #aboutBrief .profile-pic {
       width: 114px;
       height: 114px;
       margin-left: 12px;
    }
-   #about .contact-details { width: 50%; }
-   #about .download { width: 50%; }
+   #aboutBrief .contact-details { width: 50%; }
+   #aboutBrief .download { width: 50%; }
 
    /* Resume Section
    ------------------------------------------------------------------- */
@@ -215,13 +215,13 @@
 
    /* About Section
    -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
-   #about .download .button {
+   #aboutBrief .profile-pic { display: none; }
+   #aboutBrief .download .button {
       width: 100%;
       text-align: center;
       padding: 15px 20px;
    }
-   #about .main-col { padding-right: 30px; }
+   #aboutBrief .main-col { padding-right: 30px; }
 
 
    /* Resume Section
