--- a/css/layout.css
+++ b/css/layout.css
@@ -8,13 +8,14 @@
    TOC:
    a. General Styles
    b. Header Styles
-   c. About Section
+   c. About Brief Section
    d. Resume Section
    e. Portfolio Section
    f. Call To Action Section
    g. Testimonials Section
    h. Contact Section
    i. Footer
+   j. About Section
 
 ===================================================================== */
 
@@ -183,7 +184,7 @@ ul#nav li.current a { color: #F06000; }
 
 
 /* ------------------------------------------------------------------ */
-/* c. About Section
+/* c. About Brief Section
 /* ------------------------------------------------------------------ */
 
 #aboutBrief {
@@ -230,7 +231,6 @@ ul#nav li.current a { color: #F06000; }
    font-size: 20px;
 }
 
-
 /* ------------------------------------------------------------------ */
 /* d. Resume Section
 /* ------------------------------------------------------------------ */
@@ -261,6 +261,9 @@ ul#nav li.current a { color: #F06000; }
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
 
+#resume .desc{
+   list-style-type: circle;
+}
 .education, .work {
    margin-bottom: 48px;
    padding-bottom: 24px;
@@ -421,6 +424,10 @@ ul#nav li.current a { color: #F06000; }
    padding-top: 90px;
    padding-bottom: 60px;
 }
+
+#portfolio a, #portfolio a:visited  { color: #11ABB0; }
+#portfolio a:hover, #portfolio a:focus { color: #313131; }
+
 #portfolio h1 {
    font: 15px/24px 'opensans-semibold', sans-serif;
    text-transform: uppercase;
@@ -1009,3 +1016,25 @@ footer .social-links li:first-child { margin-left: 0; }
  	border-radius: 100%;
 }
 #go-top a:hover { background-color: #0F9095; }
+
+/* ------------------------------------------------------------------ */
+/* j. About Section
+/* ------------------------------------------------------------------ */
+
+#about {
+   background: #ebeeee;
+   padding-top: 90px;
+   padding-bottom: 60px;
+}
+
+#about a, #about a:visited  { color: #11ABB0; }
+#about a:hover, #about a:focus { color: #313131; }
+
+#about h1 {
+   font: 24px/24px 'opensans-semibold', sans-serif;
+   text-transform: uppercase;
+   letter-spacing: 1px;
+   text-align: center;
+   margin-bottom: 48px;
+   color: rgb(8, 8, 8);
+}
