--- a/css/layout.css
+++ b/css/layout.css
@@ -302,7 +302,7 @@ ul#nav li.current a { color: #F06000; }
    position: relative;
   	margin-bottom: 60px;
   	background: #ccc;
-  	height: 42px;
+  	height: 10px;
   	border-radius: 3px;
 }
 .bars li em {
@@ -323,7 +323,7 @@ ul#nav li.current a { color: #F06000; }
    padding-right: 24px;
   	background: #313131;
    display: inline-block;
-  	height: 42px;
+  	height: 10px;
    line-height: 42px;
    border-radius: 3px 0 0 3px;
 }
@@ -414,6 +414,54 @@ ul#nav li.current a { color: #F06000; }
   0%   { width: 0px;  }
   100% { width: 80%;  }
 }  */
+
+#resume .course-container .course-list {
+   text-align: center;
+}
+
+.course-container .course-list .course-number {
+   display: inline;
+   letter-spacing: 0.25em;
+   white-space: nowrap;
+   font-size: 0.9em;
+   text-transform: uppercase;
+}
+
+.course-container .course-list .course-name {
+   display: inline;
+   font-family: "Raleway", Helvetica, sans-serif;
+   letter-spacing: 0.25em;
+   font-size: 0.7em;
+   font-weight: 400;
+   line-height: 2.5;
+   margin-top: -1em;
+   text-transform: uppercase;
+}
+
+.course-container .course-list .course-dot {
+   display: inline;
+}
+
+.course-container ul li {
+   display: inline;
+}
+
+#resume .download {
+   text-align: center;
+}
+
+#resume .download .button {
+   margin-top: 6px;
+   background: #444;
+}
+#resume .download .button:hover {
+   background: rgb(122, 120, 120);
+   color: #2B2B2B;
+}
+#resume .download .button i {
+   margin-right: 15px;
+   font-size: 20px;
+}
 
 /* ------------------------------------------------------------------ */
 /* e. Portfolio Section
