--- a/css/layout.css
+++ b/css/layout.css
@@ -1160,6 +1160,17 @@ footer .social-links li:first-child { margin-left: 0; }
    transform: translate(-50%, -50%); */
 }
 
+#about .interest-card {
+   width: 30%;
+   height: 400px;
+   margin-top: 2%;
+   background-color: black;
+   margin-left: auto;
+   margin-right: auto;
+   border: 1px solid #efefef;
+   margin-bottom: 2%;
+ }
+
 /* ------------------------------------------------------------------ */
 /* k. Project Section
 /* ------------------------------------------------------------------ */
